<resources>
    <string name="app_name">Playlist maker</string>
    <string name="btn_search">Поиск</string>
    <string name="btn_media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="set_send">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="mail">Выберите почтовый сервис:</string>
    <string name="practicum_android">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="e_mail">luidor-arb@yandex.ru</string>
    <string name="message_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_thank_you">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="dot">\u2022</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="communication_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="search_history_clear_button">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="start_time">00:00</string>
    <string name="empty_favorites">Ваша медиатека пуста</string>
    <string name="empty_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="tab_favorites">Избранные треки</string>
    <string name="tab_playlist">Плейлисты</string>
    <string name="connection_error">Проверьте подключение к интернету</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="hint_name">Название*</string>
    <string name="hint_description">Описание</string>
    <string name="create_button">Создать</string>
    <string name="playlist_added_success0">Плейлист </string>
    <string name="playlist_added_success1"> создан</string>
    <string name="add_to_laylist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист </string>
    <string name="already_added">Трек уже добавлен в плейлист  </string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="сancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="delete_track">Удалить трек</string>
    <string name="are_you_sure">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="nothing_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="attention">Внимание</string>
    <string name="ok">OK</string>
    <string name="send">Поделиться</string>
    <string name="edit">Редактировать информацию</string>
    <string name="del">Удалить плейлист</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="want_delete_playlist">Хотите удалить плейлист</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="no_tracks">В этом плейлисте\nнет треков</string>

</resources>