<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_blue"
    android:orientation="vertical">

    <!-- Panel Header -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="16dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/grand_text_size"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_start_text"
        android:paddingTop="24dp"
        android:paddingBottom="28dp">

        <!-- Кнопка ПОИСК -->
        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:backgroundTint="@color/white"
            android:text="@string/btn_search"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/grand_text_size"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/radius"
            app:icon="@drawable/ic_search"
            app:iconTint="@color/black"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/ic_padding"/>

        <!-- Кнопка МЕДИАТЕКА -->
        <Button
            android:id="@+id/btn_media"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/btn_media"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/grand_text_size"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/radius"
            app:icon="@drawable/ic_media"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/ic_padding"
            app:iconTint="@color/black" />

        <!-- Кнопка НАСТРОЙКИ -->
        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/grand_text_size"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/radius"
            app:icon="@drawable/ic_settings"
            app:iconTint="@color/black"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/ic_padding"/>

    </LinearLayout>


</LinearLayout>