<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Panel Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:layout_marginBottom="24dp">

        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            tools:ignore="contentDescription"
            android:src="@drawable/ic_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:text="@string/settings"
            android:textSize="@dimen/grand_text_size"
            android:textColor="@color/yp_black"
            android:textStyle="bold"/>

    </LinearLayout>

    <!-- Темная тема -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_start_text"
            android:layout_marginVertical="@dimen/margin_vertical_text"
            android:text="@string/dark_theme"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"/>

    </LinearLayout>

    <!-- Поделиться приложением -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_start_text"
            android:layout_marginVertical="@dimen/margin_vertical_text"
            android:text="@string/set_send"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            tools:ignore="contentDescription"
            android:src="@drawable/ic_send"/>

    </LinearLayout>

    <!-- Написать в поддержку -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_start_text"
            android:layout_marginVertical="@dimen/margin_vertical_text"
            android:text="@string/support"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            tools:ignore="contentDescription"
            android:src="@drawable/ic_support"/>

    </LinearLayout>

    <!-- Пользовательское соглашение -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_start_text"
            android:layout_marginVertical="@dimen/margin_vertical_text"
            android:text="@string/user_agreement"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            tools:ignore="contentDescription"
            android:src="@drawable/ic_arrow_forward"/>

    </LinearLayout>



</LinearLayout>