<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".search.ui.fragment.SearchFragment">

    <!-- Panel Header -->

    <TextView
        android:text="@string/btn_search"
        style="@style/TitleStyle"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center_vertical"
        android:background="@drawable/rectangle_radius_8">

        <EditText
            android:id="@+id/searchEditText"
            app:drawableStartCompat="@drawable/ic_search"
            android:drawablePadding="4dp"
            android:drawableTint="?attr/colorOnSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="40dp"
            android:paddingVertical="8dp"
            android:hint="@string/btn_search"
            android:textCursorDrawable="@drawable/cursor"
            android:textColorHint="?attr/colorOnSecondary"
            android:background="@null"
            android:maxLines="1"
            android:inputType="text"
            android:textColor="@color/yp_black"
            android:importantForAutofill="no"
            android:imeOptions="actionSearch"
            android:singleLine="true"/>

        <LinearLayout
            android:id="@+id/clearIcon"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:gravity="center"
            android:background="@drawable/rectangle_radius_8"
            android:visibility="gone">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical|end"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                app:tint="@color/yp_black"
                tools:ignore="contentDescription"/>
        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_start_text">

        <LinearLayout
            android:id="@+id/placeHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="120dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/errorImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="contentDescription"
                android:src="@drawable/ic_nothing_found" />

            <TextView
                android:id="@+id/errorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="24dp"
                android:gravity="center_horizontal"
                android:text="@string/communication_problems"
                android:fontFamily="@font/ys_display_regular"
                android:textFontWeight="400"
                android:textSize="22sp"
                android:textColor="?attr/colorAccent" />

            <TextView
                android:id="@+id/updateButton"
                android:text="@string/update"
                style="@style/SearchButton"
                android:visibility="gone"/>

        </LinearLayout>

        <ScrollView
            android:id="@+id/rvContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:animateLayoutChanges="true">

                <TextView
                    android:id="@+id/searchHistoryTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_history_title"
                    android:fontFamily="@font/ys_display_regular"
                    android:textFontWeight="500"
                    android:textSize="20sp"
                    android:textColor="?attr/colorAccent"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:visibility="visible"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTrack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <TextView
                    android:id="@+id/searchHistoryClearButton"
                    android:text="@string/search_history_clear_button"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="12dp"
                    style="@style/SearchButton"
                    android:visibility="visible"/>

            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="140dp"
            android:indeterminateTint="@color/yp_blue"
            android:indeterminate="true"
            android:visibility="gone"/>
    </FrameLayout>
</LinearLayout>