<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createPlaylistFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_frame">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Стрелка Back -->
            <ImageView
                android:id="@+id/backButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow"
                app:tint="?attr/colorAccent"
                tools:ignore="contentDescription" />

            <TextView
                android:id="@+id/tvTitle"
                android:text="@string/new_playlist"
                style="@style/TitleStyle"
                app:layout_constraintStart_toEndOf="@+id/backButton"
                app:layout_constraintTop_toTopOf="@+id/backButton"
                app:layout_constraintBottom_toBottomOf="@+id/backButton"/>

            <!-- Обложка PlayList -->
            <com.google.android.material.imageview.ShapeableImageView
                app:shapeAppearanceOverlay="@style/roundedImageView"
                app:srcCompat="@drawable/ic_add_picture"
                android:id="@+id/playListImage"
                android:layout_width="312dp"
                android:layout_height="312dp"
                android:scaleType="centerCrop"
                android:background="@drawable/dotted_frame"
                tools:ignore="contentDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backButton"
                android:layout_marginTop="26dp"/>

            <!-- Название PlayList -->
            <EditText
                android:id="@+id/etName"
                android:hint="@string/hint_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playListImage"
                android:layout_marginTop="32dp"
                android:inputType="textCapSentences"
                android:importantForAutofill="no"
                style="@style/NewPlayListEditTextStyle" />

            <!-- Подпись поля 'Название PlayList' -->
            <TextView
                android:id="@+id/inscriptionName"
                android:text="@string/hint_name"
                app:layout_constraintBottom_toTopOf="@+id/etName"
                app:layout_constraintStart_toStartOf="@+id/etName"
                app:layout_constraintTop_toTopOf="@+id/etName"
                style="@style/NewPlayListInscriptionStyle" />

            <!-- Описание PlayList -->
            <EditText
                android:id="@+id/etDescription"
                android:hint="@string/hint_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etName"
                android:layout_marginTop="16dp"
                android:inputType="textCapSentences|textMultiLine"
                android:importantForAutofill="no"
                style="@style/NewPlayListEditTextStyle" />

            <!-- Подпись поля 'Описание PlayList' -->
            <TextView
                android:id="@+id/inscriptionDescription"
                android:text="@string/hint_description"
                app:layout_constraintBottom_toTopOf="@+id/etDescription"
                app:layout_constraintStart_toStartOf="@+id/etDescription"
                app:layout_constraintTop_toTopOf="@+id/etDescription"
                style="@style/NewPlayListInscriptionStyle"/>

            <!-- Кнопка 'Создать' -->
            <TextView
                android:id="@+id/createButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_button"
                android:textColor="@color/yp_white"
                android:textSize="16sp"
                android:fontFamily="@font/ys_display_medium"
                android:textFontWeight="500"
                android:background="@drawable/create_button"
                android:padding="12dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/etDescription"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="170dp"
                android:layout_marginBottom="32dp"
                android:clickable="true"
                android:enabled="false"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>